// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List matches snapshot when error prop is passed 1`] = `
<div
  role="alert"
>
  <div>
    Failed to load links
  </div>
</div>
`;

exports[`List matches snapshot when links prop is empty 1`] = `
<div
  role="alert"
/>
`;

exports[`List matches snapshot when links prop is passed 1`] = `
<div
  role="alert"
/>
`;

exports[`List matches snapshot when loading prop is true 1`] = `
<div
  class="loading-container"
>
  <div
    aria-label="Loading..."
  >
    Loading...
  </div>
</div>
`;
